# fastscheduler

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: FASTAPI_QUICKSTART.md
src/fastscheduler/: fastapi_integration.py  main.py  models.py
src/fastscheduler/queue/: __init__.py  base.py  heapq_backend.py  redis_backend.py
src/fastscheduler/storage/: __init__.py  json_backend.py  models.py  schema_migration.py  sqlalchemy_backend.py  sqlmodel_backend.py
src/fastscheduler/templates/: dashboard.html
tests/: README.md  conftest.py  run_fastapi_app.py  run_fastapi_app.sh  run_shutdown_test.sh  test_fastapi_app.py  test_fastapi_integration.py  test_job_groups.py  test_job_name.py  test_queue_backends.py  test_scheduler.py  test_shutdown.py  test_storage_backends.py
