[project]
name = "fastscheduler"
version = "0.2.0"
description = "Simple, lightweight task scheduler for Python with async support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Michiel Meire", email = "michiel.meire1@gmail.com" }]
keywords = ["scheduler", "cron", "task", "async", "background", "jobs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "croniter (>=6.0.0,<7.0.0)",
]

[project.optional-dependencies]
fastapi = ["fastapi[standard]>=0.100.0"]
cron = ["croniter>=2.0.0"]
database = ["sqlalchemy>=2.0.0"]
redis = ["redis>=5.0.0"]
sqlmodel = ["sqlmodel>=0.0.18"]  # Backward compatibility - deprecated
all = ["fastapi[standard]>=0.100.0", "croniter>=2.0.0", "sqlalchemy>=2.0.0", "redis>=5.0.0"]

[project.urls]
Repository = "https://github.com/MichielMe/fastscheduler"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastscheduler"]

[tool.hatch.build]
include = ["src/fastscheduler/**/*.py", "src/fastscheduler/templates/**/*.html"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.4",
    "fastapi[standard]>=0.100.0",
    "croniter>=2.0.0",
    "sqlalchemy>=2.0.0",
]
